Remove deprecated author details endpoint.
