# backend/src/main/java/ca/metricalsky/winston/mapper/dto/AuthorMapper.java
@@ -1,0 +1,14 @@
+package ca.metricalsky.winston.mapper.dto;
+
+import ca.metricalsky.winston.api.model.Author;
+import ca.metricalsky.winston.entity.AuthorEntity;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+
+@Mapper(componentModel = "spring")
+public abstract class AuthorMapper {
+
+    @Mapping(target = "handle", source = "displayName")
+    @Mapping(target = "statistics", ignore = true)
+    public abstract Author toAuthor(AuthorEntity authorEntity);
+}
