# backend/src/main/java/ca/metricalsky/winston/mapper/dto/CommentMapper.java
@@ -6,14 +6,12 @@ import ca.metricalsky.winston.entity.CommentEntity;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 
-@Mapper(componentModel = "spring")
+@Mapper(componentModel = "spring", uses = AuthorMapper.class)
 public abstract class CommentMapper {
 
-    @Mapping(target = "author.handle", source = "author.displayName")
     @Mapping(target = "text", source = "textDisplay")
     public abstract TopLevelComment toTopLevelComment(CommentEntity comment);
 
-    @Mapping(target = "author.handle", source = "author.displayName")
     @Mapping(target = "text", source = "textDisplay")
     public abstract Comment toComment(CommentEntity comment);
 }
